@@ -1544,7 +1544,7 @@ do_endm(gpasmVal r, char *name, int arity, struct pnode *parms)
 static gpasmVal
 do_endw(gpasmVal r, char *name, int arity, struct pnode *parms)
 {
-  state.lst.line.linetype = dir;
+  state.lst.line.linetype = nolist_dir;
 
   assert(!state.mac_head);
   if (!IN_MACRO_WHILE_DEFINITION) {
@@ -1554,6 +1554,8 @@ do_endw(gpasmVal r, char *name, int arity, struct pnode *parms)
     state.next_state = state_while;
     state.next_buffer.macro = state.while_head;
   }
+  else if (2 == state.pass)
+    list_macro(state.while_head->body);
 
   state.mac_body = NULL;
   state.mac_prev = NULL;
@@ -2920,7 +2922,7 @@ do_while(gpasmVal r, char *name, int arity, struct pnode *parms)
 
   assert(0 == state.while_depth);
 
-  state.lst.line.linetype = dir;
+  state.lst.line.linetype = dolist_dir;
   head->parms = (enforce_arity(arity, 1)) ? HEAD(parms) : NULL;
   head->body = NULL;
 
